Fixed scaling issue for some projects on smaller devices; Added padding to about me page

--- a/src/app/CustomCSS/imgSlider.css
+++ b/src/app/CustomCSS/imgSlider.css
@@ -1,9 +1,9 @@
 .slider {
-  --divider-color: rgba(0, 0, 0, 1);
+  --divider-color: rgba(255, 255, 255, 1);
   --divider-width: clamp(2px, 5vw, 1px);
   --default-handle-color: rgba(0, 0, 0, 1);
   transition: box-shadow 200ms ease-in-out;
-  --default-handle-width: clamp(40px, 5vw, 200px);
+  --default-handle-width: clamp(40px, 10vw, 200px);
 }
 
 .slider:focus {
